--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,2 +1,4 @@
-<h1>Error!</h1>
-<h2>There was an error on the server! Check the console!</h2>
+<div class="page">
+  <img src="images/error.jpg" alt="error">
+  <h1>404</h1>
+</div>
