--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,4 +1,7 @@
 <div class="page">
   <img src="images/error.jpg" alt="error">
-  <h1>404</h1>
+  <div class="center-search">
+    <h1>Error 404</h1>
+    <h2>Something went wrong</h2>
+  </div>
 </div>
