--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,1 +1,9 @@
-profile 
+<div class="page">
+  <img src="images/navBar.PNG" alt="profile" height="600" width="1300">
+  <div class=" profile-card">
+    <h5 class="card-title">Welcome {{currentUser.name}}</h5>
+    <img src="images/avatar.PNG" alt="avatar" height="20">
+    <p class="card-text">{{currentUser.email}}</p>
+    <a href="/logout" class="btn button-home" style="color: white;">Logout</a>
+  </div>
+</div>
